fix framer motion on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,11 +14,14 @@ body,
   padding: 0;
   margin: 0;
   height: 100%;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 #__next {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 a {
